--- a/analysis/06b_cloud_frequency_colorado.ipynb
+++ b/analysis/06b_cloud_frequency_colorado.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cdalden/miniforge3/envs/goes_env/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
+      "  _set_context_ca_bundle_path(ca_bundle_path)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -26,7 +35,7 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "\n",
-    "from analysis_utils import daily_cloud_frequency, process_monthly_data"
+    "# from analysis_utils import daily_cloud_frequency, process_monthly_data"
    ]
   },
   {
@@ -34,6 +43,78 @@
    "metadata": {},
    "source": [
     "## Calculate cloud frequency and sum monthly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def daily_cloud_frequency(year, month, state, goes):\n",
+    "    '''\n",
+    "    Function to calculate daily cloud frequency from GOES RGB composite data\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    year : str\n",
+    "        e.g., '2022'\n",
+    "    month : str\n",
+    "        e.g., '07' for July\n",
+    "    state : str\n",
+    "        e.g., 'washington'\n",
+    "    goes : str\n",
+    "        e.g., 'goes16' or 'goes17'\n",
+    "    '''\n",
+    "\n",
+    "    # define day ranges to loop through\n",
+    "    start_day = 1\n",
+    "    if month in ['01', '03', '05', '07', '08', '10', '12']:\n",
+    "        end_day = 32\n",
+    "    elif month in ['04', '06', '09', '11']:\n",
+    "        end_day = 31\n",
+    "    elif month == '02':\n",
+    "        end_day = 29\n",
+    "    \n",
+    "    # Initialize an empty list to store daily datasets\n",
+    "    monthly_ds_list = []\n",
+    "\n",
+    "    for day in range(start_day, end_day):    \n",
+    "        date = f'{year}{month}' + str(day).zfill(2)\n",
+    "        path = f'/storage/cdalden/goes/{state}/{goes}/rgb_composite/'\n",
+    "        file = f'{goes}_C02_C05_C13_rgb_{state}_{date}.nc'.format(date=date)\n",
+    "\n",
+    "        ds = xr.open_dataset(path + file)\n",
+    "\n",
+    "        # Make mask for cloud/no cloud\n",
+    "        if month == '07' or month == '08':\n",
+    "            cloud_mask = (ds.red >= 0.07) & (ds.green >= 0.19) # summer mask\n",
+    "        elif month == '04' or month == '05':\n",
+    "            cloud_mask = (ds.blue > 0.15) & (ds.red > 0.22) # spring mask        \n",
+    "        elif month == '01' or month == '02':\n",
+    "            cloud_mask = (ds.blue >= 0.13) & (ds.red > 0.39) # winter mask\n",
+    "\n",
+    "        clouds = xr.where(cloud_mask, 1, 0) # cloud (1) if all conds are met, not cloud (0) otherwise\n",
+    "        ds['clouds'] = clouds\n",
+    "\n",
+    "        # Select the time range between 6am and 9pm MDT/7am and 10pm MST\n",
+    "        ds = ds.clouds.sel(\n",
+    "            t=((ds['t'].dt.hour >= 0) & (ds['t'].dt.hour < 3)) | (ds['t'].dt.hour >= 12)\n",
+    "        )                                                         # removed sum function here\n",
+    "\n",
+    "        # Append the daily dataset to the list\n",
+    "        monthly_ds_list.append(ds)\n",
+    "\n",
+    "        print(f'appended for {date}')\n",
+    "\n",
+    "    # Concatenate all daily datasets along the time dimension\n",
+    "    monthly_ds = xr.concat(monthly_ds_list, dim='t')\n",
+    "    print('done with concatenation')\n",
+    "    \n",
+    "    # Save the concatenated dataset to a NetCDF file\n",
+    "    out_path = f'/storage/cdalden/goes/{state}/{goes}/cloud_counts/'\n",
+    "    out_file = f'{goes}_cloud_frequency_{state}_{year}{month}.nc'\n",
+    "    monthly_ds.to_netcdf(out_path + out_file)\n"
    ]
   },
   {
@@ -45,17 +126,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "appended for 20230201\n",
+      "appended for 20230202\n",
+      "appended for 20230203\n",
+      "appended for 20230204\n",
+      "appended for 20230205\n",
+      "appended for 20230206\n",
+      "appended for 20230207\n",
+      "appended for 20230208\n",
+      "appended for 20230209\n",
+      "appended for 20230210\n",
+      "appended for 20230211\n",
+      "appended for 20230212\n",
+      "appended for 20230213\n",
+      "appended for 20230214\n",
+      "appended for 20230215\n",
+      "appended for 20230216\n",
+      "appended for 20230217\n",
+      "appended for 20230218\n",
+      "appended for 20230219\n",
+      "appended for 20230220\n",
+      "appended for 20230221\n",
+      "appended for 20230222\n",
+      "appended for 20230223\n",
+      "appended for 20230224\n",
+      "appended for 20230225\n",
+      "appended for 20230226\n",
+      "appended for 20230227\n",
+      "appended for 20230228\n",
+      "done with concatenation\n"
+     ]
+    }
+   ],
    "source": [
-    "year = '2022'\n",
+    "year = '2023'\n",
     "state = 'colorado'\n",
     "goes = 'goes16'\n",
-    "months_list = ['06', '07', '08', '09']\n",
-    "# months_list = ['09']\n",
-    "# for month in months_list:\n",
-    "#     daily_cloud_frequency(year,month, state, goes)"
+    "# months_list = ['06', '07', '08', '09']\n",
+    "months_list = ['02']\n",
+    "for month in months_list:\n",
+    "    daily_cloud_frequency(year,month, state, goes)"
    ]
   },
   {
@@ -154,15 +271,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/cdalden/miniforge3/envs/goes_env/lib/python3.13/site-packages/pyogrio/raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
-      "  return ogr_read(\n"
+      "ERROR 1: PROJ: proj_create_from_database: /home/cdalden/miniforge3/envs/goes_env/lib/python3.13/site-packages/pyogrio/proj_data/proj.db contains DATABASE.LAYOUT.VERSION.MINOR = 5 whereas a number >= 6 is expected. It comes from another PROJ installation.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Could not correctly detect PROJ data files installed by pyogrio wheel",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m east_river = \u001b[43mgpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_file\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m/home/cdalden/goes_work/analysis/east_polygon.json\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mGeoJSON\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Ensure the GeoDataFrame is in the correct CRS (latitude/longitude)\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m east_river.crs \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m east_river.crs.to_string() != \u001b[33m\"\u001b[39m\u001b[33mEPSG:4326\u001b[39m\u001b[33m\"\u001b[39m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_env/lib/python3.13/site-packages/geopandas/io/file.py:289\u001b[39m, in \u001b[36m_read_file\u001b[39m\u001b[34m(filename, bbox, mask, columns, rows, engine, **kwargs)\u001b[39m\n\u001b[32m    197\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_read_file\u001b[39m(\n\u001b[32m    198\u001b[39m     filename, bbox=\u001b[38;5;28;01mNone\u001b[39;00m, mask=\u001b[38;5;28;01mNone\u001b[39;00m, columns=\u001b[38;5;28;01mNone\u001b[39;00m, rows=\u001b[38;5;28;01mNone\u001b[39;00m, engine=\u001b[38;5;28;01mNone\u001b[39;00m, **kwargs\n\u001b[32m    199\u001b[39m ):\n\u001b[32m    200\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Return a GeoDataFrame from a file or URL.\u001b[39;00m\n\u001b[32m    201\u001b[39m \n\u001b[32m    202\u001b[39m \u001b[33;03m    Parameters\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    287\u001b[39m \n\u001b[32m    288\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m289\u001b[39m     engine = \u001b[43m_check_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mread_file\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m function\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    291\u001b[39m     filename = _expand_user(filename)\n\u001b[32m    293\u001b[39m     from_bytes = \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_env/lib/python3.13/site-packages/geopandas/io/file.py:131\u001b[39m, in \u001b[36m_check_engine\u001b[39m\u001b[34m(engine, func)\u001b[39m\n\u001b[32m    128\u001b[39m     engine = geopandas.options.io_engine\n\u001b[32m    130\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m engine \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m131\u001b[39m     \u001b[43m_import_pyogrio\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    132\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m pyogrio:\n\u001b[32m    133\u001b[39m         engine = \u001b[33m\"\u001b[39m\u001b[33mpyogrio\u001b[39m\u001b[33m\"\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_env/lib/python3.13/site-packages/geopandas/io/file.py:84\u001b[39m, in \u001b[36m_import_pyogrio\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     82\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m pyogrio \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     83\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m84\u001b[39m         \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyogrio\u001b[39;00m\n\u001b[32m     86\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m     87\u001b[39m         pyogrio = \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_env/lib/python3.13/site-packages/pyogrio/__init__.py:14\u001b[39m\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyogrio\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_version\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_versions\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyogrio\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     15\u001b[39m     __gdal_geos_version__,\n\u001b[32m     16\u001b[39m     __gdal_version__,\n\u001b[32m     17\u001b[39m     __gdal_version_string__,\n\u001b[32m     18\u001b[39m     detect_write_driver,\n\u001b[32m     19\u001b[39m     get_gdal_config_option,\n\u001b[32m     20\u001b[39m     get_gdal_data_path,\n\u001b[32m     21\u001b[39m     list_drivers,\n\u001b[32m     22\u001b[39m     list_layers,\n\u001b[32m     23\u001b[39m     read_bounds,\n\u001b[32m     24\u001b[39m     read_info,\n\u001b[32m     25\u001b[39m     set_gdal_config_options,\n\u001b[32m     26\u001b[39m     vsi_listtree,\n\u001b[32m     27\u001b[39m     vsi_rmtree,\n\u001b[32m     28\u001b[39m     vsi_unlink,\n\u001b[32m     29\u001b[39m )\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyogrio\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgeopandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m read_dataframe, write_dataframe\n\u001b[32m     31\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyogrio\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m open_arrow, read_arrow, write_arrow\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_env/lib/python3.13/site-packages/pyogrio/core.py:36\u001b[39m\n\u001b[32m     29\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyogrio\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_vsi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     30\u001b[39m     ogr_vsi_listtree,\n\u001b[32m     31\u001b[39m     ogr_vsi_rmtree,\n\u001b[32m     32\u001b[39m     ogr_vsi_unlink,\n\u001b[32m     33\u001b[39m )\n\u001b[32m     35\u001b[39m _init_gdal_data()\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m \u001b[43m_init_proj_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     37\u001b[39m _register_drivers()\n\u001b[32m     38\u001b[39m _register_error_handler()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpyogrio/_ogr.pyx:253\u001b[39m, in \u001b[36mpyogrio._ogr.init_proj_data\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mValueError\u001b[39m: Could not correctly detect PROJ data files installed by pyogrio wheel"
      ]
     }
    ],
